js/k8s/hello_app/deployment/ingress/hello-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service-cluster
  namespace: default
  labels:
    app: myhello
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:    
    app: myhello
  type: ClusterIP
